# SmolSoft3D

./: CMakeLists.txt  LICENSE.md  README.md
assets/: crate.txt  floor.txt  spike.txt  triangle.txt
source/: main.cpp  math.hpp  renderer.hpp  sdl_extra.hpp
